# klayout-pex

./: .gitignore  .pylintrc  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  _run_tests.sh  build.sh  convert_layout_pdk.py  gen_sky130A_tech_pb  gen_sky130A_tech_pb.cpp  gen_tech_pb  index.html  install_test_pypi.sh  kpex.sh  lvs_layer_names.py  netlist.sh  pyproject.toml  run_integration_tests.sh  run_licenseheaders.sh  run_lint.sh  run_tests.sh  run_unit_tests.sh  tech_tool.cpp
.github/: dependabot.yml  release.yml
.github/workflows/: ci-cd.yml  cmake-multi-platform.yml  github-release.yml  integration-tests.yml  publish-pypi.yml  publish-reports-github-pages.yml
allure/: index.html
allure/442/: index.html
allure/443/: index.html
allure/445/: index.html
allure/447/: index.html
allure/448/: index.html
allure/449/: index.html
allure/450/: index.html
allure/451/: index.html
allure/452/: index.html
allure/453/: index.html
allure/455/: index.html
allure/457/: index.html
allure/458/: index.html
allure/460/: index.html
allure/464/: index.html
allure/467/: index.html
allure/469/: index.html
allure/471/: index.html
allure/473/: index.html
allure/474/: index.html
allure/475/: index.html
allure/476/: index.html
allure/477/: index.html
allure/478/: index.html
allure/479/: index.html
allure/480/: index.html
allure/481/: index.html
allure/483/: index.html
allure/484/: index.html
allure/486/: index.html
allure/487/: index.html
allure/489/: index.html
allure/490/: index.html
allure/491/: index.html
allure/492/: index.html
allure/494/: index.html
allure/501/: index.html
allure/502/: index.html
allure/504/: index.html
allure/505/: index.html
allure/508/: index.html
allure/509/: index.html
allure/511/: index.html
allure/513/: index.html
allure/517/: index.html
allure/518/: index.html
allure/519/: index.html
allure/520/: index.html
allure/521/: index.html
allure/524/: index.html
allure/525/: index.html
allure/527/: index.html
allure/529/: index.html
allure/530/: index.html
allure/531/: index.html
allure/532/: index.html
allure/534/: index.html
allure/535/: index.html
allure/536/: index.html
allure/537/: index.html
allure/538/: index.html
allure/539/: index.html
allure/541/: index.html
allure/543/: index.html
allure/547/: index.html
allure/549/: index.html
allure/551/: index.html
allure/552/: index.html
allure/553/: index.html
allure/554/: index.html
allure/556/: index.html
allure/557/: index.html
allure/559/: index.html
allure/561/: index.html
allure/565/: index.html
allure/566/: index.html
allure/567/: index.html
allure/last-history/: history-trend.json  history.json  retry-trend.json
cxx/gen_tech_pb/: main.cpp  proto.cpp  proto.h  protobuf.cpp  protobuf.h
klayout_pex/: env.py  kpex_cli.py  pdk.py  pdk_config.py  tech_info.py  version.py
klayout_pex/fastcap/: fastcap_runner.py
klayout_pex/fastercap/: fastercap_input_builder.py  fastercap_model_generator.py  fastercap_runner.py
klayout_pex/klayout/: lvsdb_extractor.py  netlist_csv.py  netlist_expander.py  repair_rdb.py  rex_core.py  shapes_pb2_converter.py
klayout_pex/magic/: magic_ext_data_structures.py  magic_runner.py
klayout_pex/netlistsvg/: netlist_json.py
klayout_pex/rcx25/: extraction_reporter.py  extraction_results.py  extractor.py  extractor_old.py  geometry_restorer.py  netlist_expander.py  types.py
klayout_pex/util/: pmap.py
klayout_pex_protobuf/: process_parasitics_pb2.py  process_stack_pb2.py  tech_pb2.py
kpex/: __main__.py  kpex.py  kpex_cli.py  tech_info.py
kpex/common/: capacitance_matrix.py
kpex/fastcap/: fastcap_runner.py
kpex/fastercap/: capacitance_matrix.py  fastercap_file_reader.py  fastercap_input_builder.py  fastercap_model_generator.py  fastercap_model_generator_test.py  fastercap_runner.py  netlist_expander.py
kpex/klayout/: lvs_runner.py  lvsdb_extractor.py  netlist_csv.py  netlist_expander.py  netlist_reducer.py  repair_rdb.py
kpex/log/: __init__.py  logger.py
kpex/logging/: __init__.py  logger.py
kpex/magic/: magic_runner.py
kpex/rcx25/: extractor.py  (+1 more)
protos/: extract.proto  fastercap_file_format.proto  process_parasitics.proto  process_stack.proto  tech.proto  units.proto
pycov/: class_index.html  function_index.html  index.html  status.json  z_04b8b9b3cc5f2e8a___init___py.html  z_04b8b9b3cc5f2e8a_lvs_runner_py.html  z_04b8b9b3cc5f2e8a_lvsdb_extractor_py.html  z_04b8b9b3cc5f2e8a_netlist_csv_py.html  z_04b8b9b3cc5f2e8a_netlist_expander_py.html  z_04b8b9b3cc5f2e8a_netlist_printer_py.html  z_04b8b9b3cc5f2e8a_netlist_reducer_py.html  z_04b8b9b3cc5f2e8a_repair_rdb_py.html  z_04b8b9b3cc5f2e8a_rex_core_py.html  z_04b8b9b3cc5f2e8a_shapes_pb2_converter_py.html  z_08a2d5a0c4daab10_shapes_pb2_py.html  z_0ee952d206d52910___init___py.html  z_0ee952d206d52910_magic_ext_data_structures_py.html  z_0ee952d206d52910_magic_ext_file_parser_py.html  z_0ee952d206d52910_magic_log_analyzer_py.html  z_0ee952d206d52910_magic_runner_py.html  z_0f1e22b729e876b9_pex_request_pb2_py.html  z_103d32cccc28b9c0_netlist_json_test_py.html  z_186c02194fd6a17c___init___py.html  z_186c02194fd6a17c_logger_py.html  z_288b876fd8e9f778___init___py.html  z_288b876fd8e9f778_r_extractor_py.html  z_2a1ea3ee988f9971_fastcap_runner_test_py.html  z_2dc81a3a091b1002_extraction_results_test_py.html  z_2dc81a3a091b1002_rcx25_CC_sky130A_test_py.html  z_2dc81a3a091b1002_rcx25_R_sky130A_test_py.html  z_2dc81a3a091b1002_rcx25_test_helpers_py.html  z_2dc81a3a091b1002_rcx25_test_py.html  z_45b499fe6cab3296___init___py.html  z_45b499fe6cab3296_fastercap_model_generator_test_py.html  z_45b499fe6cab3296_fastercap_runner_test_py.html  z_45b499fe6cab3296_fastercap_test_py.html  z_4810bfbf6fbd806c___init___py.html  z_4810bfbf6fbd806c_extraction_reporter_py.html  z_4810bfbf6fbd806c_extraction_results_py.html  z_4810bfbf6fbd806c_extractor_py.html  (+53 more)
python/: kpex.py  lvsdb_extractor.py
schemas/: process_parasitics.capnp  process_stack.capnp  tech.capnp
tests/: __main__.py  env_test.py
(+14980 files in other folders)
