[tool.poetry]
name = "kpex"
version = "0.1.0"
description = "Parasitic Extraction Tool for KLayout"
authors = ["Martin Köhler <info@martinjankoehler.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
klayout = "^0.29.8"
rich = "^13.9.4"
protobuf = "^5.28.3"
rich-argparse = "^1.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
allure-pytest = "^2.13.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
pylint-json2html = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
